[package]
name = "joeboids"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
num_cpus = "1.16.0"
clap = {version = "4.4.6", features = ["derive"]}
rayon = "1.8"
cfg-if = "1.0.0"

[dependencies.sdl2]
version = "0.35.0"
# features = ["bundled"]

[profile.windows_gnu]
inherits = "release"
debug = "line-tables-only"

[features]
visualize_neighbors = []
print_timings = []