[package]
name = "example_realtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.4.6", features = ["derive"]}
joeboids = {path = "../joeboids", version = "*"}
[dependencies.sdl2]
version = "0.35.0"
# features = ["bundled"]