[package]
name = "example_rendered"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
png = "0.17.10"
clap = {version = "4.4.8", features = ["derive"]}
joeboids = {path = "../joeboids", version = "*"}
indicatif = "0.17.7"